--- a/src/components/global/_global.scss
+++ b/src/components/global/_global.scss
@@ -1,4 +1,5 @@
 @use './variables';
+@use './fonts';
 
 *, *:before, *:after {
   box-sizing: border-box;
@@ -12,4 +13,5 @@ html {
 
 body {
   font-size: variables.$font-unit;
+  font-family: 'Poppins', sans-serif;
 }
