--- a/src/components/page-home/_page-home.scss
+++ b/src/components/page-home/_page-home.scss
@@ -95,6 +95,20 @@
           width: 40%;
         }
       }
+
+      .clear-list{
+        width: 100%;
+        padding: su();
+        text-align: right;
+        a{
+          color: #777;
+          text-decoration: none;
+
+        }
+        @include mixins.media-breakpoint-up(sm) {
+          width: 30%;
+        }
+      }
     }
   }
 }
