--- a/src/components/global/_mixins.scss
+++ b/src/components/global/_mixins.scss
@@ -5,3 +5,14 @@
     @content;
   }
 }
+
+@mixin clear-default-button-styling() {
+  background: none;
+  border: 0;
+  color: inherit;
+  font: inherit;
+  line-height: normal;
+  overflow: visible;
+  padding: 0;
+  user-select: none;
+}
