--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,3 @@
 @use './components/global/global';
-@use './components/page-home/page-home';
+@use './components/page/page';
+@use './components/todo-app/todo-app';
