moved todo-app-item into app component folder "things that change together, should live together"

--- a/src/components/todo-app/_todo-app.scss
+++ b/src/components/todo-app/_todo-app.scss
@@ -1,6 +1,6 @@
 @use './components/global/functions' as *;
 @use './components/global/mixins';
-@use './components/todo-app-item/todo-app-item';
+@use './todo-app-item';
 
 .todo-app {
   background-color: rgb(247, 247, 247);
