refactor to support e2e tests and initial e2e spec setup

--- a/src/components/todo-app/_todo-app.scss
+++ b/src/components/todo-app/_todo-app.scss
@@ -43,19 +43,19 @@
       }
     }
 
-    .item-filter {
+    .filters {
       width: 100%;
       text-align: center;
       padding: su();
       order: 1;
 
-      a {
+      &__item {
         color: #777;
         text-decoration: none;
         padding-left: su(0.5);
         padding-right: su(0.5);
 
-        &:active {
+        &:active, &--selected {
           border: 1px solid rgb(87, 87, 87);
         }
       }
